--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href="css/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Борщев Петр</title>
 </head>
 <body>
@@ -25,7 +25,44 @@
             <a class="acquaintance_hire-button">нанять меня</a>
         </div>
     </header>
-</div>
+    <main class="main">
 
+        <div class="about">
+            <div class="about-title">
+                <h2 class="about_header">обо мне</h2>
+                <p class="about_header-text">Чтобы уметь воспользоваться опытом, нужен опыт.</p>
+            </div>
+            <div class="about-center">
+                <div class="about-content">
+                    <div class="last-place_text">
+                        <p>3 последних места работы:</p>
+                        <p>май 2016 - август 2017. МБУ МФЦ ММР ( старший эксперт )</p>
+                        <p>август 2016 - настоящее время. ООО "ОКЕЙ-ТЕЛЕКОМ" ( инженер-техник )</p>
+                        <p>август 2017 - настоящее время. ООО "ОКЕЙ-ТЕЛЕКОМ" ( инженер технической поддержки )</p>
+                    </div>
+                    <img class="last-place_img" src="images/circle1.png">
+
+                    <div class="skills_text">
+                        <p>Профессиональные навыки:</p>
+                        <p>Усидчивость</p>
+                        <p>Обучаемость</p>
+                        <p>Клиентоориентированность</p>
+                    </div>
+                    <img class="skills_img" alt="Профессиональные качества" src="images/circle2.png">
+
+                    <div class="technologies-list_text">
+                        <p>Стек технологий:</p>
+                        <p>HTML 5</p>
+                        <p>CSS3</p>
+                        <p>LESS</p>
+                        <p>ES5</p>
+                    </div>
+                    <img class="technologies-list_img" alt="Стек технологий" src="images/circle3.png">
+                </div>
+            </div>
+
+        </div>
+    </main>
+</div>
 </body>
 </html>
