Начат блок "портфолио"
Частично реализована галлерея.

1. Сделать, чтобы на мобилах работало событие клик
2. Сделать картинки одного размера

--- a/index.html
+++ b/index.html
@@ -77,19 +77,26 @@
         </div>
 
         <div class="portfolio">
-            <div class="portfolio_ArrowBox">
-                <i id="portfolio-leftArrow" class="fas fa-angle-left"></i>
+            <div class="portfolio-title">
+                <h2 class="portfolio_header">обо мне</h2>
+                <p class="portfolio_header-text">Чтобы уметь воспользоваться опытом, нужен опыт.</p>
             </div>
-            <div class="portfolio_gallery">
-                <img id="portfolio-image" src="images/site1.jpg" alt="сайт из портфолио">
+            <div class="portfolio_flex">
+                <div class="portfolio_ArrowBox" id="portfolio-leftArrow">
+                    <i class="fas fa-angle-left"></i>
+                </div>
+                <div class="portfolio_gallery">
+                    <img id="portfolio-image" src="images/site1.jpg" alt="сайт из портфолио">
+                </div>
+                <div class="portfolio_ArrowBox" id="portfolio-rightArrow">
+                    <i class="fas fa-angle-right"></i>
+                </div>
             </div>
-            <div class="portfolio_ArrowBox">
-                <i id="portfolio-rightArrow" class="fas fa-angle-right"></i>
-            </div>
-
-
         </div>
+
     </main>
 </div>
+
+<script src="js/js.js"></script>
 </body>
 </html>
