--- a/index.html
+++ b/index.html
@@ -78,14 +78,33 @@
 
         <div class="portfolio">
             <div class="portfolio-title">
-                <h2 class="portfolio_header">обо мне</h2>
-                <p class="portfolio_header-text">Чтобы уметь воспользоваться опытом, нужен опыт.</p>
+                <h2 class="portfolio_header">Портфолио</h2>
+                <p class="portfolio_header-text">Самая тяжелая работа - её отсутствие.</p>
             </div>
             <div class="portfolio_flex">
                 <div class="portfolio_ArrowBox" id="portfolio-leftArrow">
                     <i class="fas fa-angle-left"></i>
                 </div>
                 <div class="portfolio_gallery">
+                    <div class="portfolio_gallery_spanTop">
+                        <h2 class="portfolio_gallery_spanTop-header" id="portfolioHeader">Интернет-магазин детских
+                            колясок "Brand"</h2>
+                        <p class="portfolio_gallery_spanTop-text" id="portfolioText">Учебный проект. В стадии
+                            разработки.</p>
+                    </div>
+                    <div class="portfolio_gallery_spanBottom">
+                        <div class="spanBottom-item">
+                            <i class="fab fa-github"></i>
+                            <a class="portfolio_gallery_spanBottom-gitHub" id="gitHubR"
+                               href="https://github.com/p1tDrujba/pram-shop-2" target="_blank">Перейти на
+                                git-репозиторий проекта</a>
+                        </div>
+                        <div class="spanBottom-item">
+                            <i class="fas fa-external-link-square-alt"></i>
+                            <a class="portfolio_gallery_spanBottom-currentSite" id="currentSite"
+                               href="sites/pram-shop-2/index.html" target="_blank">Перейти на сайт</a>
+                        </div>
+                    </div>
                     <img id="portfolio-image" src="images/site1.jpg" alt="сайт из портфолио">
                 </div>
                 <div class="portfolio_ArrowBox" id="portfolio-rightArrow">
@@ -97,6 +116,6 @@
     </main>
 </div>
 
-<script src="js/js.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
