--- a/index.html
+++ b/index.html
@@ -9,37 +9,38 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
           integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <title>Борщев Петр</title>
-    <script type="text/javascript" src="js/jquery-1.11.1.min.js" defer></script>
-    <script type="text/javascript" src="js/script-jq.js" defer></script>
+    <script src="js/jquery-1.11.1.min.js" defer></script>
+    <script src="js/script-jq.js" defer></script>
 </head>
 <body>
 <div class="container">
     <header class="header">
         <nav class="navigation" id="menu">
             <ul class="navigation_list">
-                <li class="navigation_item"><a class="navigation_link" href="#about" title="обо мне">обо мне</a></li>
-                <li class="navigation_item"><a class="navigation_link" href="#portfolio" title="портфолио">портфолио</a>
+                <li class="navigation__item"><a class="navigation__link" href="#about" title="обо мне">обо мне</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#portfolio"
+                                                title="портфолио">портфолио</a>
                 </li>
-                <li class="navigation_item"><a class="navigation_link" href="#feedback" title="контакты">контакты</a>
+                <li class="navigation_item"><a class="navigation__link" href="#feedback" title="контакты">контакты</a>
                 </li>
             </ul>
         </nav>
         <div class="acquaintance">
-            <h2 class="acquaintance_greeting">Здравствуйте!</h2>
-            <h1 class="acquaintance_surname">Я Петр Борщев</h1>
-            <a class="button acquaintance_hire-button" href="#feedback">нанять меня</a>
+            <h2 class="acquaintance__greeting">Здравствуйте!</h2>
+            <h1 class="acquaintance__surname">Я Петр Борщев</h1>
+            <a class="button" href="#feedback">нанять меня</a>
         </div>
     </header>
-    <main class="main">
 
+    <main class="main">
         <div class="about" id="about">
             <div class="about-title">
-                <h2 class="about_header">обо мне</h2>
-                <p class="about_header-text">Чтобы уметь воспользоваться опытом, нужен опыт.</p>
+                <h2 class="about-title__header">обо мне</h2>
+                <p class="about-title__header-text">Чтобы уметь воспользоваться опытом, нужен опыт.</p>
             </div>
             <div class="about-center">
-                <div class="about-content">
-                    <div class="last-place_text">
+                <div class="about-center__content">
+                    <div class="last-place__text">
                         <h3>3 последних места работы:</h3>
                         <ul>
                             <li>МБУ МФЦ ММР <br>старший эксперт</li>
@@ -47,30 +48,30 @@
                             <li>ООО "ОКЕЙ-ТЕЛЕКОМ" <br> инженер технической поддержки</li>
                         </ul>
                     </div>
-                    <img class="last-place_img" src="images/circle1.png">
+                    <img class="last-place__img" src="images/circle1.png" alt="последнее место работы">
 
                     <div class="skills_text">
                         <h3>Профессиональные навыки:</h3>
                         <ul>
-                            <li>Усидчивость</li>
-                            <li>Обучаемость</li>
+                            <li>Умение прочесть чужой код и документацию на английском языке</li>
                             <li>Клиентоориентированность</li>
+                            <li>Владение английским языком на базовом уровне</li>
                         </ul>
                     </div>
-                    <img class="skills_img" src="images/circle2.png">
+                    <img class="skills_img" src="images/circle2.png" alt="Проф. навыки">
 
                     <div class="technologies-list_text">
                         <h3>Стек технологий:</h3>
                         <ul>
                             <li>HTML5</li>
                             <li>CSS3</li>
-                            <li>LESS</li>
-                            <li>ES6</li>
+                            <li>Базовые знания ES6</li>
+                            <li>GIT</li>
                         </ul>
                     </div>
-                    <img class="technologies-list_img" src="images/circle3.png">
+                    <img class="technologies-list_img" src="images/circle3.png" alt="Используемые технологии">
                 </div>
-                <a class="button about_cv">Скачать полное резюме</a>
+                <a class="button about_cv" href="mypdf.pdf" target="_blank">Скачать полное резюме</a>
             </div>
         </div>
 
@@ -121,8 +122,10 @@
                 <div class="feedback-me">
                     <img class="feedback-photo" src="images/face.png" alt="Лик создателя">
                     <div class="feedback-social-flex">
-                        <a class="feedback-link" href="https://github.com/p1tDrujba" target="_blank"><i class="fab fa-github-square"></i></a>
-                        <a class="feedback-link" href="https://vk.com/id4672044" target="_blank"> <i class="fab fa-vk"></i></a>
+                        <a class="feedback-link" href="https://github.com/p1tDrujba" target="_blank"><i
+                                class="fab fa-github-square"></i></a>
+                        <a class="feedback-link" href="https://vk.com/id4672044" target="_blank"> <i
+                                class="fab fa-vk"></i></a>
                     </div>
                     <a class="feedback-mail" href="mailto:p.borshchev@gmail.com">p.borshchev@gmail.com</a>
                 </div>
@@ -141,7 +144,7 @@
     </main>
 </div>
 
-<script type="text/javascript" src="js/script.js" defer></script>
+<script src="js/script.js" defer></script>
 
 </body>
 </html>
