--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Сайт-портфолио Петра Борщева">
+    <meta name="keywords" content="веб-разработчик, верстка, frontend">
+    <meta name="author" content="Борщев Петр">
+    <meta property="og:image" content="https://pp.userapi.com/c850620/v850620044/37a7d/KmvQPCKluiE.jpg">
+    <meta property="og:description" content="Сайт веб-разработчика Борщева Петра">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -33,7 +38,7 @@
     </header>
 
     <main class="main">
-        <div class="about" id="about">
+        <section class="about" id="about">
             <div class="about-title">
                 <h2 class="about-title__header">обо мне</h2>
                 <p class="about-title__header-text">Чтобы уметь воспользоваться опытом, нужен опыт.</p>
@@ -50,7 +55,7 @@
                     </div>
                     <img class="last-place__img" src="images/circle1.png" alt="последнее место работы">
 
-                    <div class="skills_text">
+                    <div class="skills__text">
                         <h3>Профессиональные навыки:</h3>
                         <ul>
                             <li>Умение прочесть чужой код и документацию на английском языке</li>
@@ -58,73 +63,72 @@
                             <li>Владение английским языком на базовом уровне</li>
                         </ul>
                     </div>
-                    <img class="skills_img" src="images/circle2.png" alt="Проф. навыки">
+                    <img class="skills__img" src="images/circle2.png" alt="Проф. навыки">
 
-                    <div class="technologies-list_text">
+                    <div class="technologies-list__text">
                         <h3>Стек технологий:</h3>
                         <ul>
                             <li>HTML5</li>
                             <li>CSS3</li>
-                            <li>Базовые знания ES6</li>
+                            <li>JS</li>
                             <li>GIT</li>
                         </ul>
                     </div>
-                    <img class="technologies-list_img" src="images/circle3.png" alt="Используемые технологии">
+                    <img class="technologies-list__img" src="images/circle3.png" alt="Используемые технологии">
                 </div>
-                <a class="button about_cv" href="mypdf.pdf" target="_blank">Скачать полное резюме</a>
+                <a class="button cv" href="mypdf.pdf" target="_blank">Скачать полное резюме</a>
             </div>
-        </div>
+        </section>
 
-        <div class="portfolio" id="portfolio">
+        <section class="portfolio" id="portfolio">
             <div class="portfolio-title">
-                <h2 class="portfolio_header">Портфолио</h2>
-                <p class="portfolio_header-text">Самая тяжелая работа - её отсутствие.</p>
+                <h2 class="portfolio-title__header">Портфолио</h2>
+                <p class="portfolio-title__header-text">Самая тяжелая работа - её отсутствие.</p>
             </div>
-            <div class="portfolio_flex">
-                <div class="portfolio_ArrowBox" id="portfolio-leftArrow">
+            <div class="portfolio__flex">
+                <div class="portfolio__ArrowBox" id="portfolio-leftArrow">
                     <i class="fas fa-angle-left"></i>
                 </div>
-                <div class="portfolio_gallery">
-                    <div class="portfolio_gallery_spanTop">
-                        <h2 id="portfolioHeader" class="portfolio_gallery_spanTop-header">Интернет-магазин детских
+                <div class="portfolio__gallery">
+                    <div class="portfolio__gallery__spanTop">
+                        <h2 id="portfolioHeader" class="portfolio__gallery__spanTop-header">Интернет-магазин детских
                             колясок "Brand"</h2>
-                        <p class="portfolio_gallery_spanTop-text" id="portfolioText">Учебный проект. В стадии
+                        <p class="portfolio__gallery__spanTop-text" id="portfolioText">Учебный проект. В стадии
                             разработки.</p>
                     </div>
-                    <div class="portfolio_gallery_spanBottom">
-                        <div class="spanBottom-item">
-                            <a class="portfolio_gallery_spanBottom-gitHub" id="gitHubR"
+                    <div class="portfolio__gallery__spanBottom">
+                        <div class="spanBottom__item">
+                            <a class="portfolio__gallery__spanBottom-gitHub" id="gitHubR"
                                href="https://github.com/p1tDrujba/pram-shop-2" target="_blank"><i
-                                    class="fab fa-github"></i><span class="portfolio_gallery_display-none">Перейти на
-                                git-репозиторий проекта</span></a>
+                                    class="fab fa-github"></i>Перейти на
+                                git-репозиторий проекта</a>
                         </div>
-                        <div class="spanBottom-item">
-                            <a class="portfolio_gallery_spanBottom-currentSite" id="currentSite"
+                        <div class="spanBottom__item">
+                            <a class="portfolio__gallery__spanBottom-currentSite" id="currentSite"
                                href="sites/pram-shop-2/index.html" target="_blank"><i
-                                    class="fas fa-external-link-square-alt"></i><span
-                                    class="portfolio_gallery_display-none">Перейти на сайт</span></a>
+                                    class="fas fa-external-link-square-alt"></i>Перейти на сайт</a>
                         </div>
                     </div>
                     <img id="portfolio-image" src="images/site1.jpg" alt="сайт из портфолио" class="suka">
                 </div>
-                <div class="portfolio_ArrowBox" id="portfolio-rightArrow">
+                <div class="portfolio__ArrowBox" id="portfolio-rightArrow">
                     <i class="fas fa-angle-right"></i>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="feedback" id="feedback">
-            <div class="feedback-header">
-                <h2 class="feedback-title">Свяжитесь со мной</h2>
-                <p class="feedback-text">Сомневаешься — не делай, делаешь — не сомневайся.</p>
+        <footer class="feedback" id="feedback">
+            <div class="feedback-title">
+                <h2 class="feedback-title__header">Свяжитесь со мной</h2>
+                <p class="feedback-title__text">Сомневаешься — не делай, делаешь — не сомневайся.</p>
             </div>
             <div class="feedback-flex">
                 <div class="feedback-me">
                     <img class="feedback-photo" src="images/face.png" alt="Лик создателя">
                     <div class="feedback-social-flex">
-                        <a class="feedback-link" href="https://github.com/p1tDrujba" target="_blank"><i
+                        <a class="feedback-social__link" href="https://github.com/p1tDrujba" target="_blank"><i
                                 class="fab fa-github-square"></i></a>
-                        <a class="feedback-link" href="https://vk.com/id4672044" target="_blank"> <i
+                        <a class="feedback-social__link" href="https://vk.com/id4672044" target="_blank"> <i
                                 class="fab fa-vk"></i></a>
                     </div>
                     <a class="feedback-mail" href="mailto:p.borshchev@gmail.com">p.borshchev@gmail.com</a>
@@ -139,7 +143,7 @@
                     </form>
                 </div>
             </div>
-        </div>
+        </footer>
 
     </main>
 </div>
